AR_RU_04 : Services : Updated font names

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                     of the world
                 </h1>
 
-                <h3 class="hero__sub-heading grey-text inter">
+                <p class="hero__sub-heading grey-text inter">
                     We always make our customer happy by providing as many
                     choices as possible
-                </h3>
+                </p>
 
                 <div class="hero__buttons actions">
                     <button class="actions__get-started button--primary button">
@@ -157,9 +157,9 @@
                 <h2 class="section-heading pink-text circular-md">SERVICES</h2>
 
                 <!-- Services sub heading -->
-                <h3 class="section-sub-heading circular-md">
+                <p class="section-sub-heading circular-md">
                     Our top value categories for you
-                </h3>
+                </p>
             </div>
 
             <!-- Services card container -->
@@ -179,10 +179,10 @@
                         <h3 class="card__title circular-md">Best Tour Guide</h3>
 
                         <!-- Services card 1 description -->
-                        <h5 class="card__desc inter grey-text">
+                        <p class="card__desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
-                        </h5>
+                        </p>
                     </div>
                 </div>
 
@@ -200,14 +200,14 @@
                         <h3 class="card__title circular-md">Easy Booking</h3>
 
                         <!-- Services card 2 description -->
-                        <h5 class="card__desc inter grey-text">
+                        <p class="card__desc inter grey-text">
                             Square, was moving across the sand in their
                             direction.
-                        </h5>
+                        </p>
                     </div>
                 </div>
 
-                <div class="services__card services__card3 card card--lg">
+                <div class="services__card card card--lg">
                     <!-- Services card 3 image -->
                     <div class="card__img">
                         <img
@@ -223,10 +223,10 @@
                         </h3>
 
                         <!-- Services card 3 description -->
-                        <h5 class="card__desc inter grey-text">
+                        <p class="card__desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
-                        </h5>
+                        </p>
                     </div>
                 </div>
             </div>
