AR_RU_05 : Travel : Updated changes

--- a/index.html
+++ b/index.html
@@ -249,17 +249,16 @@
                         We helping you find your dream location
                     </h3>
                 </div>
-                <h4 class="section-desc inter grey-text">
+                <p class="section-desc inter grey-text">
                     Contrary to popular belief, Lorem Ipsum is not simply random
                     text. It has roots in a piece of classical Latin literature
                     from 45 BC.
-                </h4>
+                </p>
 
                 <div class="travel__cards-container">
                     <div class="travel__icon">
                         <img
                             src="/assets/images/travel/icon-yellow.png"
-                            alt="Image of an icon that resembles a bag with a star in the middle"
                             aria-hidden="true"
                         />
                     </div>
@@ -269,17 +268,15 @@
                             <h2 class="card__heading orange-text circular-md">
                                 500+
                             </h2>
-                            <h3 class="card__sub-heading inter">
+                            <p class="card__sub-heading inter">
                                 Holiday Package
-                            </h3>
+                            </p>
                         </div>
                         <div class="tarvel__card card card--sm">
                             <h2 class="card__heading orange-text circular-md">
                                 100
                             </h2>
-                            <h3 class="card__sub-heading inter">
-                                Luxury Hotel
-                            </h3>
+                            <p class="card__sub-heading inter">Luxury Hotel</p>
                         </div>
                     </div>
                     <div class="travel__cards-group2">
@@ -287,17 +284,17 @@
                             <h2 class="card__heading orange-text circular-md">
                                 7
                             </h2>
-                            <h3 class="card__sub-heading inter">
+                            <p class="card__sub-heading inter">
                                 Premium Airlines
-                            </h3>
+                            </p>
                         </div>
                         <div class="tarvel__card card card--sm">
                             <h2 class="card__heading orange-text circular-md">
                                 2k+
                             </h2>
-                            <h3 class="card__sub-heading inter">
+                            <p class="card__sub-heading inter">
                                 Happy Customers
-                            </h3>
+                            </p>
                         </div>
                     </div>
                 </div>
