AR_RU_05 : Travel : Worked on Reviews

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <div class="hero__triangles">
                     <img
                         src="/assets/images/hero/triangles.png"
+                        alt=""
                         aria-hidden="true"
                     />
                 </div>
@@ -259,6 +260,7 @@
                     <div class="travel__icon">
                         <img
                             src="/assets/images/travel/icon-yellow.png"
+                            alt=""
                             aria-hidden="true"
                         />
                     </div>
