--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
                         We offer best services
                     </h3>
                 </div>
-                <h4 class="section-desc inter grey-text">
+                <p class="section-desc inter grey-text">
                     Contrary to popular belief, Lorem Ipsum is not simply random
                     text. It has roots in a piece of classical Latin literature
                     from 45 BC.
-                </h4>
+                </p>
                 <div class="features__card-container">
                     <div class="features__card card card--horizontal">
                         <div class="card__icon-container orange-bg">
@@ -340,9 +340,9 @@
                             <h2 class="circular-md card-heading">
                                 We offer best services
                             </h2>
-                            <h3 class="inter grey-text card-sub-heading">
+                            <p class="inter grey-text card-sub-heading">
                                 Lorem Ipsum is not simply random text
-                            </h3>
+                            </p>
                         </div>
                     </div>
                     <div class="features__card card card--horizontal">
@@ -353,9 +353,9 @@
                             <h2 class="circular-md card-heading">
                                 Schedule your trip
                             </h2>
-                            <h3 class="inter grey-text card-sub-heading">
+                            <p class="inter grey-text card-sub-heading">
                                 It has roots in a piece of classical
-                            </h3>
+                            </p>
                         </div>
                     </div>
                     <div class="features__card card card--horizontal">
@@ -366,9 +366,9 @@
                             <h2 class="circular-md card-heading">
                                 Get discounted coupons
                             </h2>
-                            <h3 class="inter grey-text card-sub-heading">
+                            <p class="inter grey-text card-sub-heading">
                                 Lorem Ipsum is not simply random text
-                            </h3>
+                            </p>
                         </div>
                     </div>
                 </div>
