--- a/index.html
+++ b/index.html
@@ -167,19 +167,21 @@
                 <!-- Services tour guide card -->
                 <div class="services__card card card--lg">
                     <!-- Services card 1 image -->
-                    <div class="card__img">
+                    <div class="services__card-img">
                         <img
                             src="/assets/images/services/destination.png"
                             alt="Globe with two pin points connected by dotted line."
                         />
                     </div>
 
-                    <div class="card__content-wrapper">
+                    <div class="services__card-content-wrapper">
                         <!-- Services card 1 heading -->
-                        <h3 class="card__title circular-md">Best Tour Guide</h3>
+                        <h3 class="services__card-title circular-md">
+                            Best Tour Guide
+                        </h3>
 
                         <!-- Services card 1 description -->
-                        <p class="card__desc inter grey-text">
+                        <p class="services__card-desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
                         </p>
@@ -188,19 +190,21 @@
 
                 <div class="services__card card card--lg">
                     <!-- Services card 2 image -->
-                    <div class="card__img">
+                    <div class="services__card-img">
                         <img
                             src="/assets/images/services/booking.png"
                             alt="Icon of a transaction and a check on calender depicting easy booking."
                         />
                     </div>
 
-                    <div class="card__content-wrapper">
+                    <div class="services__card-content-wrapper">
                         <!-- Services card 2 heading -->
-                        <h3 class="card__title circular-md">Easy Booking</h3>
+                        <h3 class="services__card-title circular-md">
+                            Easy Booking
+                        </h3>
 
                         <!-- Services card 2 description -->
-                        <p class="card__desc inter grey-text">
+                        <p class="services__card-desc inter grey-text">
                             Square, was moving across the sand in their
                             direction.
                         </p>
@@ -209,21 +213,21 @@
 
                 <div class="services__card card card--lg">
                     <!-- Services card 3 image -->
-                    <div class="card__img">
+                    <div class="services__card-img">
                         <img
                             src="/assets/images/services/cloudy.png"
                             alt="Icon of a cloud with sun on its corner."
                         />
                     </div>
 
-                    <div class="card__content-wrapper">
+                    <div class="services__card-content-wrapper">
                         <!-- Services card 3 heading -->
-                        <h3 class="card__title circular-md">
+                        <h3 class="services__card-title circular-md">
                             Weather Forecast
                         </h3>
 
                         <!-- Services card 3 description -->
-                        <p class="card__desc inter grey-text">
+                        <p class="services__card-desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
                         </p>
@@ -267,34 +271,44 @@
 
                     <div class="travel__cards-group1">
                         <div class="tarvel__card card card--sm">
-                            <h2 class="card__heading orange-text circular-md">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
                                 500+
                             </h2>
-                            <p class="card__sub-heading inter">
+                            <p class="travel__card-sub-heading inter">
                                 Holiday Package
                             </p>
                         </div>
                         <div class="tarvel__card card card--sm">
-                            <h2 class="card__heading orange-text circular-md">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
                                 100
                             </h2>
-                            <p class="card__sub-heading inter">Luxury Hotel</p>
+                            <p class="travel__card-sub-heading inter">
+                                Luxury Hotel
+                            </p>
                         </div>
                     </div>
                     <div class="travel__cards-group2">
                         <div class="tarvel__card card card--sm">
-                            <h2 class="card__heading orange-text circular-md">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
                                 7
                             </h2>
-                            <p class="card__sub-heading inter">
+                            <p class="travel__card-sub-heading inter">
                                 Premium Airlines
                             </p>
                         </div>
                         <div class="tarvel__card card card--sm">
-                            <h2 class="card__heading orange-text circular-md">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
                                 2k+
                             </h2>
-                            <p class="card__sub-heading inter">
+                            <p class="travel__card-sub-heading inter">
                                 Happy Customers
                             </p>
                         </div>
