--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <div class="hero__triangles">
                     <img
                         src="/assets/images/hero/triangles.png"
+                        alt=""
                         aria-hidden="true"
                     />
                 </div>
@@ -166,19 +167,21 @@
                 <!-- Services tour guide card -->
                 <div class="services__card card card--lg">
                     <!-- Services card 1 image -->
-                    <div class="card__img">
+                    <div class="services__card-img">
                         <img
                             src="/assets/images/services/destination.png"
                             alt="Globe with two pin points connected by dotted line."
                         />
                     </div>
 
-                    <div class="card__content-wrapper">
+                    <div class="services__card-content-wrapper">
                         <!-- Services card 1 heading -->
-                        <h3 class="card__title circular-md">Best Tour Guide</h3>
+                        <h3 class="services__card-title circular-md">
+                            Best Tour Guide
+                        </h3>
 
                         <!-- Services card 1 description -->
-                        <p class="card__desc inter grey-text">
+                        <p class="services__card-desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
                         </p>
@@ -187,19 +190,21 @@
 
                 <div class="services__card card card--lg">
                     <!-- Services card 2 image -->
-                    <div class="card__img">
+                    <div class="services__card-img">
                         <img
                             src="/assets/images/services/booking.png"
                             alt="Icon of a transaction and a check on calender depicting easy booking."
                         />
                     </div>
 
-                    <div class="card__content-wrapper">
+                    <div class="services__card-content-wrapper">
                         <!-- Services card 2 heading -->
-                        <h3 class="card__title circular-md">Easy Booking</h3>
+                        <h3 class="services__card-title circular-md">
+                            Easy Booking
+                        </h3>
 
                         <!-- Services card 2 description -->
-                        <p class="card__desc inter grey-text">
+                        <p class="services__card-desc inter grey-text">
                             Square, was moving across the sand in their
                             direction.
                         </p>
@@ -208,21 +213,21 @@
 
                 <div class="services__card card card--lg">
                     <!-- Services card 3 image -->
-                    <div class="card__img">
+                    <div class="services__card-img">
                         <img
                             src="/assets/images/services/cloudy.png"
                             alt="Icon of a cloud with sun on its corner."
                         />
                     </div>
 
-                    <div class="card__content-wrapper">
+                    <div class="services__card-content-wrapper">
                         <!-- Services card 3 heading -->
-                        <h3 class="card__title circular-md">
+                        <h3 class="services__card-title circular-md">
                             Weather Forecast
                         </h3>
 
                         <!-- Services card 3 description -->
-                        <p class="card__desc inter grey-text">
+                        <p class="services__card-desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
                         </p>
@@ -231,6 +236,78 @@
             </div>
         </section>
 
+        <!-- Travel Section -->
+        <section class="travel container">
+            <div class="travel__img">
+                <img
+                    src="/assets/images/travel/bg.png"
+                    alt="Image of a happy lady sitting on a travel bag."
+                />
+            </div>
+
+            <div class="travel__content">
+                <div class="travel__headings-wrapper">
+                    <h2 class="section-heading circular-md pink-text">
+                        TRAVEL POINT
+                    </h2>
+                    <h3 class="section-sub-heading circular-md">
+                        We helping you find your dream location
+                    </h3>
+                </div>
+                <p class="section-desc inter grey-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random
+                    text. It has roots in a piece of classical Latin literature
+                    from 45 BC.
+                </p>
+
+                <div class="travel__cards-container">
+                    <div class="travel__cards-group1">
+                        <div class="tarvel__card card card--sm">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
+                                500+
+                            </h2>
+                            <p class="travel__card-sub-heading inter">
+                                Holiday Package
+                            </p>
+                        </div>
+                        <div class="tarvel__card card card--sm">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
+                                100
+                            </h2>
+                            <p class="travel__card-sub-heading inter">
+                                Luxury Hotel
+                            </p>
+                        </div>
+                    </div>
+                    <div class="travel__cards-group2">
+                        <div class="tarvel__card card card--sm">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
+                                7
+                            </h2>
+                            <p class="travel__card-sub-heading inter">
+                                Premium Airlines
+                            </p>
+                        </div>
+                        <div class="tarvel__card card card--sm">
+                            <h2
+                                class="travel__card-heading orange-text circular-md"
+                            >
+                                2k+
+                            </h2>
+                            <p class="travel__card-sub-heading inter">
+                                Happy Customers
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
