--- a/index.html
+++ b/index.html
@@ -331,40 +331,46 @@
                 </p>
                 <div class="features__card-container">
                     <div class="features__card card card--horizontal">
-                        <div class="card__icon-container orange-bg">
+                        <div class="orange-bg features__card-icon">
                             <i class="icon-Vector-4" aria-hidden="true"></i>
                         </div>
-                        <div class="card__text-wrapper">
-                            <h2 class="circular-md card-heading">
+                        <div class="features__card-text-wrapper">
+                            <h2 class="circular-md features__card-heading">
                                 We offer best services
                             </h2>
-                            <p class="inter grey-text card-sub-heading">
+                            <p
+                                class="inter grey-text features__card-sub-heading"
+                            >
                                 Lorem Ipsum is not simply random text
                             </p>
                         </div>
                     </div>
                     <div class="features__card card card--horizontal">
-                        <div class="card__icon-container yellow-bg">
+                        <div class="features__card-icon yellow-bg">
                             <i class="icon-Vector-5" aria-hidden="true"></i>
                         </div>
-                        <div class="card__text-wrapper">
-                            <h2 class="circular-md card-heading">
+                        <div class="features__card-text-wrapper">
+                            <h2 class="circular-md features__card-heading">
                                 Schedule your trip
                             </h2>
-                            <p class="inter grey-text card-sub-heading">
+                            <p
+                                class="inter grey-text features__card-sub-heading"
+                            >
                                 It has roots in a piece of classical
                             </p>
                         </div>
                     </div>
                     <div class="features__card card card--horizontal">
-                        <div class="card__icon-container orange-bg">
+                        <div class="features__card-icon orange-bg">
                             <i class="icon-Vector-12" aria-hidden="true"></i>
                         </div>
-                        <div class="card__text-wrapper">
-                            <h2 class="circular-md card-heading">
+                        <div class="features__card-text-wrapper">
+                            <h2 class="circular-md features__card-heading">
                                 Get discounted coupons
                             </h2>
-                            <p class="inter grey-text card-sub-heading">
+                            <p
+                                class="inter grey-text features__card-sub-heading"
+                            >
                                 Lorem Ipsum is not simply random text
                             </p>
                         </div>
