--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         />
         <meta name="keywords" content="travel, hotels, holiday, vacation" />
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="./src/styles/main.scss" />
     </head>
     <body>
         <!-- Header section -->
