--- a/index.html
+++ b/index.html
@@ -308,6 +308,77 @@
                 </div>
             </div>
         </section>
+        <section class="features container">
+            <div class="features__img">
+                <img
+                    src="/assets/images/key-features/key-features-bg-img.png"
+                    alt="Collage of images, church and  surfer riding waves"
+                />
+            </div>
+            <div class="features__content">
+                <div class="features__headings-wrapper">
+                    <h2 class="section-heading circular-md pink-text">
+                        KEY FEATURES
+                    </h2>
+                    <h3 class="section-sub-heading circular-md">
+                        We offer best services
+                    </h3>
+                </div>
+                <p class="section-desc inter grey-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random
+                    text. It has roots in a piece of classical Latin literature
+                    from 45 BC.
+                </p>
+                <div class="features__card-container">
+                    <div class="features__card card card--horizontal">
+                        <div class="orange-bg features__card-icon">
+                            <i class="icon-Vector-4" aria-hidden="true"></i>
+                        </div>
+                        <div class="features__card-text-wrapper">
+                            <h2 class="circular-md features__card-heading">
+                                We offer best services
+                            </h2>
+                            <p
+                                class="inter grey-text features__card-sub-heading"
+                            >
+                                Lorem Ipsum is not simply random text
+                            </p>
+                        </div>
+                    </div>
+                    <div class="features__card card card--horizontal">
+                        <div class="features__card-icon yellow-bg">
+                            <i class="icon-Vector-5" aria-hidden="true"></i>
+                        </div>
+                        <div class="features__card-text-wrapper">
+                            <h2 class="circular-md features__card-heading">
+                                Schedule your trip
+                            </h2>
+                            <p
+                                class="inter grey-text features__card-sub-heading"
+                            >
+                                It has roots in a piece of classical
+                            </p>
+                        </div>
+                    </div>
+                    <div class="features__card card card--horizontal">
+                        <div class="features__card-icon orange-bg">
+                            <i class="icon-Vector-12" aria-hidden="true"></i>
+                        </div>
+                        <div class="features__card-text-wrapper">
+                            <h2 class="circular-md features__card-heading">
+                                Get discounted coupons
+                            </h2>
+                            <p
+                                class="inter grey-text features__card-sub-heading"
+                            >
+                                Lorem Ipsum is not simply random text
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
