AR_RU_07 : Testimonial : Updated changes

--- a/index.html
+++ b/index.html
@@ -379,6 +379,9 @@
             </div>
         </section>
 
+        <!-- <div class="testimonial__img-holder">
+                <img src="./public/assets/images/testimonial/testimonial-bg.png" alt="" aria-hidden="true">
+         </div> -->
         <section class="testimonial container">
             <div class="testimonial__headings-wrapper">
                 <h2 class="section-heading pink-text circular-md">
@@ -397,6 +400,7 @@
                                     <img
                                         src="/assets/images/testimonial/profile.png"
                                         alt="Profile pic of a person"
+                                        loading="lazy"
                                     />
                                 </div>
                                 <div class="slide__content">
@@ -455,14 +459,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <h4
+                                <p
                                     class="slide__desc inter grey-text section-desc"
                                 >
                                     Contrary to popular belief, Lorem Ipsum is
                                     not simply random text. It has roots in a
                                     piece of classical Latin literature from 45
                                     BC.
-                                </h4>
+                                </p>
                             </div>
                         </li>
 
@@ -472,6 +476,7 @@
                                     <img
                                         src="/assets/images/testimonial/profile.png"
                                         alt="Profile pic of a person"
+                                        loading="lazy"
                                     />
                                 </div>
                                 <div class="slide__content">
@@ -530,14 +535,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <h4
+                                <p
                                     class="slide__desc inter grey-text section-desc"
                                 >
                                     Contrary to popular belief, Lorem Ipsum is
                                     not simply random text. It has roots in a
                                     piece of classical Latin literature from 45
                                     BC.
-                                </h4>
+                                </p>
                             </div>
                         </li>
                         <li class="splide__slide">
@@ -546,6 +551,7 @@
                                     <img
                                         src="/assets/images/testimonial/profile.png"
                                         alt="Profile pic of a person"
+                                        loading="lazy"
                                     />
                                 </div>
                                 <div class="slide__content">
@@ -604,14 +610,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <h4
+                                <p
                                     class="slide__desc inter grey-text section-desc"
                                 >
                                     Contrary to popular belief, Lorem Ipsum is
                                     not simply random text. It has roots in a
                                     piece of classical Latin literature from 45
                                     BC.
-                                </h4>
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -621,12 +627,20 @@
                     <button
                         class="splide__arrow splide__arrow--prev button--secondary button"
                     >
-                        <i class="icon-Bold-Outline-1" aria-hidden="true"></i>
+                        <i
+                            class="icon-Bold-Outline-1"
+                            aria-hidden="true"
+                            aria-label="Previous testimonial"
+                        ></i>
                     </button>
                     <button
                         class="splide__arrow splide__arrow--next button--primary button"
                     >
-                        <i class="icon-Bold-Outline" aria-hidden="true"></i>
+                        <i
+                            class="icon-Bold-Outline"
+                            aria-hidden="true"
+                            aria-label="Next testimonial"
+                        ></i>
                     </button>
                 </div>
             </div>
