--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     class="nav-links__container white-bg js-nav-links__container"
                 >
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Discover</a></li>
-                    <li><a href="#">Special Deals</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#services">Discover</a></li>
+                    <li><a href="#features">Special Deals</a></li>
+                    <li><a href="#footer">Contact</a></li>
                 </ul>
                 <!--Auth btns-->
                 <div class="header__auth">
@@ -152,7 +152,7 @@
         </section>
 
         <!-- Services section -->
-        <section class="services container">
+        <section class="services container" id="services">
             <div class="services__content">
                 <!-- Services heading -->
                 <h2 class="section-heading pink-text circular-md">SERVICES</h2>
@@ -309,7 +309,7 @@
                 </div>
             </div>
         </section>
-        <section class="features container">
+        <section class="features container" id="features">
             <div class="features__img">
                 <img
                     src="/assets/images/key-features/key-features-bg-img.png"
@@ -678,7 +678,7 @@
             </div>
         </section>
 
-        <footer class="footer container">
+        <footer class="footer container" id="footer">
             <div class="footer__travlog circular-md">
                 <div class="footer__content">
                     <div class="footer__heading-wrapper">
@@ -687,14 +687,14 @@
                                 class="icon-Vector-9 gradient-purple-to-pink"
                             ></i>
                         </a>
-                        <span class="footer__heading"> Travlog </span>
+                        <h2 class="footer__heading">Travlog</h2>
                     </div>
 
-                    <div class="footer__desc grey-text">
+                    <p class="footer__desc grey-text">
                         Contrary to popular belief, Lorem Ipsum is not simply
                         random text. It has roots in a piece of classical Latin
                         literature from 45 BC.
-                    </div>
+                    </p>
                 </div>
 
                 <div class="footer__socials">
