AR_RU_10 : Improvements 1 : Added blurs and max width to container

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <link rel="stylesheet" href="./src/styles/main.scss" />
     </head>
     <body>
+        <div class="orange-blur"></div>
         <!-- Header section -->
-        <header class="header white-bg container">
+        <header class="header container transparent-bg">
             <!-- Website logo -->
             <a href="#" class="header__logo">
                 <i
@@ -33,7 +34,7 @@
 
             <!--Navigation Links-->
             <nav
-                class="js-header__nav-links nav-links white-bg grey-text circular-md font-weight-400"
+                class="js-header__nav-links nav-links grey-text circular-md font-weight-400"
             >
                 <ul
                     class="nav-links__container white-bg js-nav-links__container"
